--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -81,8 +81,8 @@
           <div class="div-block-10">
             <form action="/restaurant/delete" method="POST">
               <input type="hidden" value="<%= item.username %>" name="username">
-              <a href="#" type="submit" class="block delbutn w-button"
-                style="padding-left: 50px; padding-right: 50px">Delete</a>
+              <button href="#" type="submit" class="block delbutn w-button"
+                style="padding-left: 50px; padding-right: 50px">Delete</button>
             </form>
             <form action="/restaurant/block" method="post">
               <input type="hidden" value="<%= item.username %>" name="username">
